@startuml

title __REGISTRE's Class Diagram__\n

  namespace com.example.myplanning {
    namespace activitats {
      namespace Registre {
        class com.example.myplanning.activitats.Registre.Registre {
            - btnRegistrarse : Button
            - db : FirebaseFirestore
            - observer : Observer<String>
            - txtMail : EditText
            - txtPassword : EditText
            - txtPassword2 : EditText
            - txtUser : EditText
            + registrarseAccio()
            # onCreate()
            # onResume()
            - initWidgets()
        }
      }
    }
  }
  

  namespace com.example.myplanning {
    namespace activitats {
      namespace Registre {
        class com.example.myplanning.activitats.Registre.RegistreViewModel {
            - respuesta : MutableLiveData<String>
            + RegistreViewModel()
            + contrasenyaIncorrecte()
            + emailIncorrecte()
            + getRespuesta()
            + registreCorrecte()
            + usuariJaCreat()
        }
      }
    }
  }
  

  com.example.myplanning.activitats.Registre.Registre -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myplanning.activitats.Registre.Registre o-- com.example.myplanning.model.Llista.ComprobarDades : comprobarDades
  com.example.myplanning.activitats.Registre.Registre o-- com.example.myplanning.model.Llista.Usuario : usuarioOnline
  com.example.myplanning.activitats.Registre.Registre o-- com.example.myplanning.activitats.Registre.RegistreViewModel : viewModel
  com.example.myplanning.activitats.Registre.RegistreViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
